[project]
name = "langchain-end-to-end-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-groq>=0.3.2",
    "openai>=1.75.0",
    "streamlit>=1.44.1",
]
